--- a/movies/package.json
+++ b/movies/package.json
@@ -12,10 +12,11 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3007 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
